--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ textarea{
   resize: none;
   color: #000000;
   border-left: 1px solid black;
-  padding: 10px;
+  width: 80%;
 }
 
 .jumbotron {
@@ -33,13 +33,16 @@ textarea{
 .row {
   white-space: pre-wrap;
   height: 80px;
-  border-top: 1px solid white;;
+  border-top: 1px solid white;
+  display: flex;
+  justify-content: space-between;
 }
 
 .hour {
   background-color: #ffffff;
   color: #000000;
   border-top: 1px dashed #000000;
+  width: 10%;
 }
 
 .past {
@@ -63,6 +66,9 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  margin-right: -50px;
+  width: 10%;
+  height: 80px;
 }
 
 .saveBtn i:hover {
